# expansion-cones

./: .gitignore  BadTetFinder.cc  BadTriangleFinder.cc  BadTriangleFinder.hh  BatchProcessor.cc  CMakeLists.txt  CommonMeshDefinitions.hh  Expander.cc  Expander.hh  ExpansionCone.cc  ExpansionCone.hh  ExpansionDataLogger.hh  LightWeightJsonExporter.hh  OtherHelpers.cc  OtherHelpers.hh  PrecisionDiagnostics.cc  README.md  ShrinkAndExpand.cc  StarShapifyableExpansionCone.cc  TetMeshBoundarySplitter.cc  TetMeshBoundarySplitter.hh  cmake-save.txt  temp_main.cc
ProgressiveEmbedding/: EdgeCollapser.cc  EdgeCollapser.hh  EdgeCycle.cc  EdgeCycle.hh  MeshTopologicalComparator.cc  MeshTopologicalComparator.hh  ProgEmbeddingHelpers.hh  ProgressiveEmbedder.cc  ProgressiveEmbedder.hh  SubTriangleMap.cc  SubTriangleMap.hh  TopologicalFaceSet.cc  Uncollapser.cc  Uncollapser.hh
examples/: notch_domain.ovm  notch_random_star_boundary.ovm  notch_stiff_tet_boundary.txt  prism_ball_boundary.txt  prism_domain.ovm  prism_tet_boundary.ovm  thingi10k_81152_domain.ovm  thingi10k_81152_random_star_boundary.txt  thingi10k_83715_ball_boundary.ovm  thingi10k_83715_ball_codomain.ovm  thingi10k_83715_domain.ovm  thingi10k_83715_stiff_tet_boundary.ovm  thingi10k_83715_tet_boundary.txt
examples/output/: notch_random_star_codomain._expansion_data.json  notch_random_star_codomain.ovm  notch_stiff_tet_codomain.expansion_data.json  notch_stiff_tet_codomain.ovm  prism_ball_codomain.expansion_data.json  prism_ball_codomain.ovm  prism_tet_codomain._expansion_data.json  thingi10k_81152_random_star_codomain.expansion_data.json  thingi10k_81152_random_star_codomain.ovm  thingi10k_83715_tet_codomain.expansion_data.json  thingi10k_83715_tet_codomain.ovm
src/: BadTetFinder.hh  BatchProcessor.cc  BatchProcessor.hh  ConnectedVertexSubsetIterator.cc  ConnectedVertexSubsetIterator.hh  Expander.cc  Expander.hh  ExpansionCone.cc  ExpansionDataLogger.cc  LightWeightStopWatch.cc  LightWeightStopWatch.hh  PrecisionDiagnostics.hh  ProgEmbeddingHelpers.cc  ProgEmbeddingHelpers.hh  ProgressiveEmbedder.cc  ProgressiveEmbedder.hh  ShrinkAndExpand.cc  SphereMapper.cc  SphereMapper.hh  StarShapifyableExpansionCone.cc  StarShapifyableExpansionCone.hh  TetMapper.cc  TetMapper.hh  TopoHelper.cc  TopoHelper.hh  TopologicalFaceSet.hh  TopologicalLink.cc  TopologicalLink.hh  VertexPriorityQueue.hh
